--- a/PlanterApp/Presentation/Views/MainWindow.xaml
+++ b/PlanterApp/Presentation/Views/MainWindow.xaml
@@ -51,7 +51,7 @@
 
                 <!--<ToggleButton x:Name="speechToggle" Command="{Binding CommandService.SpeechControlCommand}"
                               Content="Voice Control" ToolTip="Toggle voice control on and off" CommandParameter="{Binding IsChecked, ElementName=speechToggle}" />-->
-                <Separator Margin="4,2"/>
+                <!--<Separator Margin="4,2"/>-->
 
                 <DatePicker SelectedDate="{Binding CurrentDate}" DisplayDateStart="{Binding StartDate}" DisplayDateEnd="{Binding EndDate}" MouseWheel="OnMouseWheel"
                             IsEnabled="{Binding ExperimentService.HasExperiment}" FirstDayOfWeek="Monday">
@@ -65,6 +65,10 @@
                 </DatePicker>
                 <Button Command="{Binding CommandService.ResetTimeMachineCommand}" Content="Reset" ToolTip="Reset time machine and return to current date"
                         IsEnabled="{Binding ExperimentService.IsTimeMachineOn}" />
+
+                <Separator Margin="4,2"/>
+                <ToggleButton x:Name="coordinateToggle" Command="{Binding CommandService.ShowCoordinatesCommand}" IsChecked="{Binding ShowCoordinates}"
+                              Content="Coordinates" ToolTip="Toggle plant coordinates on and off" CommandParameter="{Binding IsChecked, ElementName=coordinateToggle}" />
             </ToolBar>
         </ToolBarTray>
 
